--- a/Aula-13.html
+++ b/Aula-13.html
@@ -13,7 +13,11 @@
 	text-align: center; 
 	position: absolute; 
 	bottom: 0}
+.copy{
+font-style: italic;
+font width: bold;
 
+}
 </style>
 
 </head>
@@ -21,7 +25,7 @@
 
 <div id="menu">	Home | Quem somos | Contatos </div>
 <div id="conteudo">Bloco para o conteudo do site</div>
-<div id="rodape">Copyright &copy; Todos os direitos reservados</div>
+<div id="rodape"> <span class="copy">Copyright &copy;</span> Todos os direitos reservados</div>
 
 </body>
 </html>
