--- a/Aula-16.html
+++ b/Aula-16.html
@@ -90,7 +90,7 @@
 #center{
 		position: relative;
 		top: -800px;
-		text-align: center; ;
+		text-align: center;
 		background: #7CFC00;
 		height: 400px;
 		width: 50%;
@@ -110,7 +110,7 @@
 		top: -800px;
 		text-align: center;
 		position: relative;
-		background: #B8860B;
+		background: #9400D3;
 		width: 100%;
 		height: 30px;
 		}
