--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <a href="Aula-14Fontes.html">| Fontes |</a>
 <a href="Aula-15.html">| Aula-15 |</a>
 <a href="Aula-16.html">| Aula-16 |</a>
-<a href="Aula-17.html">Aula - 17 |</a>
+<a href="Aula-17.html">| Aula-17 |</a>
+<a href="Aula-18.html">| Aula-18 |</a>
 
 </h3>
 	</div>
