--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <a href="Aula-16.html">| Aula-16 |</a>
 <a href="Aula-17.html">| Aula-17 |</a>
 <a href="Aula-18.html">| Aula-18 |</a>
+<a href="Aula-19.html">| Aula-18 |</a>
 
 </h3>
 	</div>
