--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <a href="Aula-17.html">| Aula-17 |</a>
 <a href="Aula-18.html">| Aula-18 |</a>
 <a href="Aula-19.html">| Aula-19 |</a>
+<a href="Aula-24.html">| Aula-24 |</a>
 
 </h3>
 	</div>
