--- a/Aula-24.html
+++ b/Aula-24.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Aula-24</title>
+	<title>Animação</title>
 	<meta charset="utf-8">
 	<style type="text/css">
 	.box{
