--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <a href="Aula-19.html">| Aula-19 |</a>
 <a href="Aula-24.html">| Aula-24 |</a>
 <A  href = "Aula-26.html"> | Aula-26 | </a>
+<A href = " Aula-27.html " > | Aula-27 | </a>	
 </h3>
 	</div>
 </body>
